<resources>
    <string name="app_name">Homework2</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="email_subject">Email Subject</string>
    <string name="average_case">Average Case</string>
    <string name="worst_case">Worst Case</string>
    <string name="subject">Subject:</string>
    <string name="data_structure">Data Structure</string>
    <string name="insert">Insert</string>
    <string name="get_min">Get Min</string>
    <string name="complexity">Complexity</string>
    <string name="to">To:</string>
    <string name="result">Result</string>
    <string name="worst_case_Text">Worst Case</string>
    <string name="operations">Operations</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
</resources>
